--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -83,7 +83,7 @@
         <div style="">
           <p class="text-left p-2 mx-2 mb-0 bg-primary">This week is the first iteration of the first sprint and will focus on getting oriented onto the course by reviewing the course structure, understanding the first module in greater depth and reviewing how good academic practice can be developed. I have been advised on a reading list that will state all the books that may be useful going forward in this module.&nbsp;<br><br>In the post that introduces the course it advises that the success of high-level academic studies relies on the ability to manage time effectively. The course is structured using the Scrum project management style and is divided into sprints which contain the weekly study topics. I have used this style to structure my critical responsive journal in reflection of the course structure, this enables a clear layout of each week divided by sprints therefore making it easier to read, navigate through and it also prevents a feeling of being overwhelmed knowing I can do each week bit by bit.<br><br>I watched two videos on the Waterfall and Scrum Agile Framework methodologies. I have learned that waterfall is a linear based project management methodology which relies heavily on documentation and planning before development starts. Very little user feedback is collected until the end and the methodology relies on taking the risk that the project will be at acceptable standards in the end. Agile on the other hand is an iterative approach to project management which relies on user input and feedback which is collated and collaborated on in Sprints and regular meet ups with the team, this results in the end project being better in quality. Comparing the two methodologies - ref here<reference about="" agile="" vs="" waterfall=""><br><br>I understand that is always best that good academic practice is used when studying on a high-level academic course as failing to follow the rules of this practice will result in a misconduct review. Failing to reference outsourced work or quotes will result in one of these reviews and credit must be given to the author or artist. Plagiarism, the act of copying another individual’s work is also not tolerated and everything I create for this project will of my own original writing or design unless otherwise stated and referenced. Any references or quotes that I use for this CRJ will be listed at the bottom of the page or annotated under the image with their respective sources to avoid any negative academic practices using websites like CiteThisForMe to help with the referencing process.&nbsp;</reference>
           </p>
-          <h3 class="text-center bg-secondary p-2 mx-2 mt-2">Challenge task</h3>
+          <h3 class="text-center bg-secondary p-2 mx-2 mt-2">Challenge Activity</h3>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -108,12 +108,16 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2 mt-2">References</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p class="text-left p-2 bg-primary mb-0">References</p>
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="text-center bg-secondary p-2 mt-2">References</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="text-left p-2 bg-primary">References</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row pt-2">
@@ -159,9 +163,21 @@
           <h3 class="text-center my-2 py-2 bg-secondary" contenteditable="true">Interation 3 - Final Concept</h3><img class="img-fluid d-block mx-auto" src="https://i.ibb.co/M5Sg07g/Navigation-Final.jpg">
         </div>
       </div>
-      <div class="row px-2">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-left bg-primary p-2">As you can see the concept has progressively gotten better the more that I iterated on the creativity. I learned that the more that you iterate on a creative piece the greater it will look in its final stages and I will be taking this method into future creative works to accomplish the best result.&nbsp;<br><br>Reading research provided by the course I have learned that in order to find creative solutions to problems or come up with ideas that are new for a medium such as a video game there are several creative thinking techniques that you can use for this. To summarize some of these techniques they are listed as follows:&nbsp;<br><br>- Brainstorming&nbsp;<br>- Mind Maps&nbsp;<br>- Round Robin&nbsp;<br>- Opposite Thinking&nbsp;<br>- Collage / Cut-UP&nbsp;<br>- Mash-up&nbsp;<br>- Crazy Eights&nbsp;<br>- SCAMPER&nbsp;<br><br>Each of these creative thinking techniques may be used as an individual or with a team. For making video games I have used mind maps and brainstorming but have not used any other. Going forward in my games development practices I will consider using more techniques for creative idea generation and this may result in a greater flow of creative features.&nbsp;<br><br>Having watched the interview of Simon Colton, a professor of Digital Games Technologies I have done some research on how AI is being used in video games. In July 2021 in an article by (Stuart, 2021) they say that the CEO of Sony made an interesting announcement, that the company will be collaborating with PlayStation developers to create intelligent computer controlled characters. He then went on to state that “Reinforcement learning is an area of machine learning in which an AI effectively teaches itself how to act through trial and error. In short, these characters will mimic human players. To some extent, they will think.”. This means that artificial intelligence in video games is about to get smarter and AI learning capabilities have expanded quickly. In the video game ‘Blight of the Rose’ which is in development by myself and my personal company there are plans to implement AI in my enemy units, albeit I have not gotten to the stage where I must write my AI but articles like this give me inspiration and want to further my knowledge in AI to make my game enemies smart like the ones stated by (Stuart, 2021). </p>
+          <h3 class="text-center bg-secondary p-2 mt-2">Challenge Activity</h3>
+          <p class="text-left bg-primary p-2">Challenge.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2">References</h3>
+          <p class="text-left p-2 bg-primary">Stuart, K. (2021) ‘Think, fight, feel: how video game artificial intelligence is evolving’, The Guardian, 19 July. Available at: https://www.theguardian.com/games/2021/jul/19/video-gaming-artificial-intelligence-ai-is-evolving (Accessed: 14 October 2021). </p>
+        </div>
         <div style="">
-          <p class="text-left bg-primary p-2 mb-2" style="">As you can see the concept has progressively gotten better the more that I iterated on the creativity. I learned that the more that you iterate on a creative piece the greater it will look in its final stages and I will be taking this method into future creative works to accomplish the best result. </p>
+          <div class="row">
+          </div>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -192,7 +208,7 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h5 class="text-center bg-dark p-2" id="week3">Week 3 - Rapid Ideation</h5>
+          <h5 class="text-center bg-dark p-2 pt-0" id="week3">Week 3 - Rapid Ideation</h5>
         </div>
       </div>
       <div class="row">
