--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton BSc. I am a 27-year-old aspiring games programmer who has released 2 published full android games on the Google Play store that is studying an Indie Games Development master’s degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will document the weekly challenges that I have been given in a critical way, explain how I think that I’ve accomplished the task and evaluate what I’ve learned in the process.&nbsp;<br><br>This blog is designed for educational purposes, and any outsource material will be referenced correctly to the original source, author or creator at the bottom of each post. Below is a diagram that I created of the blog structure which highlights each module and how each post will be laid out in an agile project methodology format as this is how the course is managed. Below the diagram is a contents page that will take you to the specified course module. </p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton BSc. I am a 27-year-old aspiring games programmer who has released 2 published full android games on the Google Play store that is studying an Indie Games Development master’s degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will document my weekly challenges and the spark forums that are used to communicate with my peers to get feedback and to give feedback to others. My posts will be written critically, and I will explain how I think that I’ve accomplished the task then evaluate what I’ve learned in the process.<br><br>This blog is designed for educational purposes, and any outsource material will be referenced correctly to the original source, author or creator at the bottom of each post. Below is a diagram that I created of the blog structure which highlights each module and how each post will be laid out in an agile project methodology format as this is how the course is managed. Below the diagram is a contents page that will take you to the specified course module. </p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -54,7 +54,9 @@
         </div>
       </div>
       <div class="row pb-2 px-2">
-        <div class="col-md-12 bg-primary py-2"><a class="btn btn-block btn-dark" href="CRJ-GDO710.html">GDO710 - Development Practice</a><a class="btn btn-block btn-dark" href="CRJ-IGO720.html">IGO720 - Game Development</a><a class="btn btn-block btn-dark" href="CRJ-GDO730.html">GDO730 - Co-Creative Design &amp;&nbsp;<br>Development Practice</a><a class="btn btn-block btn-dark" href="CRJ-IGO740.html">IGO740 - Indie Game Start-Up</a><a class="btn btn-block btn-dark" href="CRJ-GDO750.html">GDO750 - Major Project</a></div>
+        <div class="col-md-12 py-2 bg-primary">
+          <h3 class="text-center bg-secondary p-2">Modules</h3><a class="btn btn-block btn-dark" href="CRJ-GDO710.html">GDO710 - Development Practice</a><a class="btn btn-block btn-dark" href="CRJ-IGO720.html">IGO720 - Game Development</a><a class="btn btn-block btn-dark" href="CRJ-GDO730.html">GDO730 - Co-Creative Design &amp;&nbsp;<br>Development Practice</a><a class="btn btn-block btn-dark" href="CRJ-IGO740.html">IGO740 - Indie Game Start-Up</a><a class="btn btn-block btn-dark" href="CRJ-GDO750.html">GDO750 - Major Project</a>
+        </div>
       </div>
     </div>
   </div>
