--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -306,7 +306,23 @@
           <h3 class="text-center bg-secondary p-2">Pirate Jam</h3><img class="d-block mx-auto img-fluid w-75" src="https://i.ibb.co/GPcDhNV/pirate-jam.png">
           <p class="text-left bg-primary p-2 border border-dark">Source: http://www.pirate-jam.com/ </p>
           <h3 class="text-center bg-secondary p-2">Challenge Activity</h3>
-          <p class="text-left p-2 bg-primary">TBD.</p>
+          <p class="text-left p-2 bg-primary">For this week’s challenge activity, I have been tasked with reverse engineering an interesting aspect of an artefact and reverse engineer it to make a prototype using prototyping techniques. I have chosen to reverse engineer a video game as this will be the most beneficial for my development practices. I have chosen to make a 2D game in the Unity engine and writing the scripts in the C# programming language.<br><br>The artefact that I have chosen to make a prototype of is a game called Ghost Trick: Phantom Detective, a game developed and published by Capcom in 2010 for the Nintendo DS. It is an adventure puzzle game where the player takes the role of a ghost who possesses objects to solve puzzles and navigate through the environment. The player posses an ability called the ghost trick where they manipulate the object they are currently possessing to move or activate which could cause a chain of events where other objects are also manipulated in the process. For my prototype I will replicate the ghost trick game mechanic in a 2D environment. I have chosen this game as I am currently developing a 2D game so it will give me experience and potentially new ideas going forward with developing 2D games. </p>
+          <h3 class="text-center bg-secondary p-2 mt-2">Ghost Trick: Phantom Detective Trailer</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/ifTvukfaO6g" allowfullscreen="" class="embed-responsive-item"></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-left bg-primary p-2 border border-dark">Trailer for Ghost Trick: Phantom Detective by Capcom. Source: https://www.youtube.com/watch?v=ifTvukfaO6g </p>
+          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Design</h3>
+          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Development</h3>
+          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Final Result</h3>
         </div>
       </div>
       <div class="row">
