--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -320,20 +320,41 @@
       <div class="row">
         <div class="col-md-12">
           <p class="text-left bg-primary p-2 border border-dark">Trailer for Ghost Trick: Phantom Detective by Capcom. Source: https://www.youtube.com/watch?v=ifTvukfaO6g </p>
-          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Design</h3>
-          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Development</h3>
-          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Final Result</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2 mt-2">References</h3>
+          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Design</h3>
+          <p class="text-left p-2 bg-primary">TBD.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Final Result</h3>
+          <p class="text-left p-2 bg-primary">TBD.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Result</h3>
+          <p class="text-left p-2 bg-primary">TBD.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2 mt-2" style="">References</h3>
+          <p class="text-left p-2 bg-primary">TBD.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2 mt-2">Sprint Reflection</h3>
           <p class="text-left p-2 bg-primary">TBD.</p>
         </div>
       </div>
     </div>
   </div>
-  <div class="mb-4" style="">
+  <div class="my-4" style="">
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
@@ -384,7 +405,7 @@
       </div>
     </div>
   </div>
-  <div class="mb-4" style="">
+  <div class="my-4" style="">
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
@@ -435,7 +456,7 @@
       </div>
     </div>
   </div>
-  <div class="mb-4" style="">
+  <div class="my-4" style="">
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
