--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -361,7 +361,10 @@
           </div>
           <p class="text-left bg-primary p-2 border border-dark">Player losing blocks and moving and falling raycast demonstration.</p>
           <h3 class="text-center bg-secondary p-2 mt-2">Prototype: Result</h3>
-          <p class="text-left p-2 bg-primary">I have managed to fully recreate Stacker arcade using a grid, blocks, Raycasts and coroutines. I have replicated the rules and the animations for a classic mode with plans to create an endless mode to create a gameplay twist to differentiate it from the original game. Everything has gone well but if there is one element, I would like to change it would be to rebalance the difficulty, as it stands the speed has 3 settings, a slow speed when you have 3 blocks, a medium speed when you have 2 blocks and a fast speed when you have 1 block. I think that instead of having it this way the speed should gradually increase making the game increasingly difficult the more the player stacks a block. Also, due to time constraints I did not manage to match up the lives of the blocks to those on the game menu and this is another element that I would like to change going forward. Overall, the reconstruction went well but for next time I would like to make the game more difficult and make it more featureful.</p><img class="d-block img-fluid pb-2 mx-auto w-50" src="https://i.ibb.co/T0XC7DN/Dev-Update-5.png">
+          <p class="text-left p-2 bg-primary">I have managed to fully recreate Stacker arcade using a grid, blocks, Raycasts and coroutines. I have replicated the rules and the animations for a classic mode with plans to create an endless mode to create a gameplay twist to differentiate it from the original game. Everything has gone well but if there is one element, I would like to change it would be to rebalance the difficulty, as it stands the speed has 3 settings, a slow speed when you have 3 blocks, a medium speed when you have 2 blocks and a fast speed when you have 1 block. I think that instead of having it this way the speed should gradually increase making the game increasingly difficult the more the player stacks a block. Also, due to time constraints I did not manage to match up the lives of the blocks to those on the game menu and this is another element that I would like to change going forward. Overall, the reconstruction went well but for next time I would like to make the game more difficult and make it more featureful.</p><img class="d-block img-fluid pb-2 mx-auto w-50" src="https://i.ibb.co/T0XC7DN/Dev-Update-5.png" height="100
+50
+300" width="50
+300">
         </div>
       </div>
       <div class="row">
@@ -372,12 +375,6 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center bg-secondary p-2" style="">References</h3>
-          <p class="text-left p-2 bg-primary">TBD.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2 mt-2">Sprint Reflection</h3>
           <p class="text-left p-2 bg-primary">TBD.</p>
         </div>
       </div>
